# HarmonyIntegration

./: .gitignore  README.md
src/Depth_Image_to_PointCloud/: CMakeLists.txt
src/Depth_Image_to_PointCloud/launch/: preprocess_rosbag.launch
src/Depth_Image_to_PointCloud/src/: compress_to_raw.py  main.cpp  publish_marker.py
src/grasp_detection_framework/grasp_detection_core/: CMakeLists.txt  package.xml
src/grasp_detection_framework/grasp_detection_core/src/: convnet_ros.py  convnet_ros_grasp_only.py  ssg.py  ssg_config.py  ssg_ros.py  ssg_utils.py  test_convnet.py  test_ssg.py
src/grasp_detection_framework/grasp_detection_core/srv/: DetectGrasp.srv
src/grasp_detection_framework/grasp_detection_msgs/: CMakeLists.txt  package.xml
src/grasp_detection_framework/grasp_detection_msgs/msg/: Grasp.msg
